# HinLegacy

./: .gitignore  LICENSE  README.md  chanakya.py  devlys.py  krutidev.py  pyproject.toml
src/hinlegacy/: __init__.py  __main__.py  api.py  constants.py  exceptions.py  models.py
src/hinlegacy/cli/: __init__.py  main.py
src/hinlegacy/decoder/: __init__.py  bootstrap.py  devlys_010.py  dispatch.py  krutidev_010.py  registry.py  walkman_chanakya.py  walkman_chanakya_905.py
src/hinlegacy/decoder/engines/: chanakya.py
src/hinlegacy/detector/: __init__.py  detect.py  heuristics.py  patterns.py
tests/: detection_test.py  detector_encoder_test_2.py  prodtest.py  test.py  test_cli.py
